--- a/index.html
+++ b/index.html
@@ -300,16 +300,16 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/hero5.png"
+                src="./assets/hero10.jpeg"
                 alt="Project 3"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">DICE game</h2>
+            <h2 class="experience-sub-title project-title">Travel site</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://glistening-centaur-9cb729.netlify.app/'"
+                onclick="location.href='https://travell-kohl-eight.vercel.app/'"
               >
                 link
               </button>
